# gecode-5-extension

./: .gitignore  CMakeLists.txt  FindGecode.cmake  Makefile  README.md  cbs.hpp  cbs.hpp.sh  langford-number.cpp  latinsquare.cpp  main.cpp  mlp.py  mlp.sav  nonogram.cpp  pentominoes.cpp  qcp.cpp  randf.sav  scaler.sav  scalermlp.sav  schema.txt  sql-interface.cpp  sql-interface.hh
analysis/: Logreg_and_graphs.ipynb  Untitled.ipynb  lines.ipynb  utils.py
analysis/results_graph_gecode/: results_nono  results_qcp
cbs/: cbs.hpp
models/: bin-packing.cpp  crowded-chess.cpp  ex_qcp  langford-number.cpp  latinsquare.cpp  magic-square.cpp  minimum-deficiency.cpp  nonogram.cpp  ortho-latin.cpp  qcp.cpp  spanning-tree.cpp  sudoku.cpp
models/MagicSquare/: README  format.sh
models/spanningTree_dataset/hwtests/: 4_5.0  test
sql/: gen_sql_schema.sh  schema.txt  sql-interface.cpp  sql-interface.hh  sql-str-query.hpp  sql-str-query.sh  sql-structs.hh  sql-structs.sh  sql_schema.sh  utils.py
